{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 10,
  "lineage": "44a4e063-cf25-27e6-0eff-095cb8e00b9c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "client_zero",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:867994182412:targetgroup/tg-client-zero/4961f49032328867",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:867994182412:listener-rule/app/pry-alb/6b05bdcf1d0fd119/100af10e8cd3e977/33606032f0c67377",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/client-zero/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:867994182412:listener-rule/app/pry-alb/6b05bdcf1d0fd119/100af10e8cd3e977/33606032f0c67377",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:867994182412:listener/app/pry-alb/6b05bdcf1d0fd119/100af10e8cd3e977",
            "priority": 100,
            "region": "us-east-1",
            "tags": {
              "client_id": "client-zero",
              "component": "alb-rule",
              "environment": "sandbox",
              "project": "pry"
            },
            "tags_all": {
              "client_id": "client-zero",
              "component": "alb-rule",
              "environment": "sandbox",
              "project": "pry"
            },
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:867994182412:listener-rule/app/pry-alb/6b05bdcf1d0fd119/100af10e8cd3e977/33606032f0c67377"
          },
          "dependencies": [
            "aws_lb_target_group.client_zero",
            "data.terraform_remote_state.alb",
            "data.terraform_remote_state.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "client_zero",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:867994182412:targetgroup/tg-client-zero/4961f49032328867",
            "arn_suffix": "targetgroup/tg-client-zero/4961f49032328867",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:867994182412:targetgroup/tg-client-zero/4961f49032328867",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-client-zero",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "client_id": "client-zero",
              "component": "target-group",
              "environment": "sandbox",
              "project": "pry"
            },
            "tags_all": {
              "client_id": "client-zero",
              "component": "target-group",
              "environment": "sandbox",
              "project": "pry"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c35b68ecca51793c"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:867994182412:targetgroup/tg-client-zero/4961f49032328867"
          },
          "dependencies": [
            "data.terraform_remote_state.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "client_zero",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867994182412:security-group/sg-0ff645e7d94bf9112",
            "description": "SG for client-zero ECS service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ff645e7d94bf9112",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01367fa309d036f72"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "pry-client-zero-sg",
            "name_prefix": "",
            "owner_id": "867994182412",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "client_id": "client-zero",
              "component": "security-group",
              "environment": "sandbox",
              "project": "pry"
            },
            "tags_all": {
              "client_id": "client-zero",
              "component": "security-group",
              "environment": "sandbox",
              "project": "pry"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c35b68ecca51793c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "867994182412",
            "id": "sg-0ff645e7d94bf9112",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.terraform_remote_state.alb",
            "data.terraform_remote_state.vpc"
          ]
        }
      ]
    }
  ]
}